# deskvrm

./: README.md  package-lock.json
src/: App.tsx  ModelView.css  ModelView.tsx  index.css  vrm.ts
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/components/: VrmLibrary.tsx  VrmaPanel.css  VrmaPanel.tsx
src/hooks/: index.ts  useDoubleClick.ts  useMousePosition.ts  useVrmLoader.ts  useWindowDrag.ts
src/services/: vrmAnimator.ts  vrmRenderer.ts  vrmaLoader.ts
src/types/: vrm.ts
src/util/: fetch.ts
