[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.1", features = [ "macos-private-api", "api-all"] }
mouse_position = "0.1.4"
axum = { version = "0.8.2", features = ["tokio", "http1"] }
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
log = "0.4.25"
simple_logger = "5.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
